Register+login+forgetPass+resetPass

--- a/src/css/layout/login.css
+++ b/src/css/layout/login.css
@@ -21,7 +21,7 @@
   margin-bottom: 2rem;
 }
 
-.login-form input[type='text'],
+.login-form input[type='email'],
 .login-form input[type='password'] {
   width: 100%;
   padding: 0.8rem;
