--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,8 @@
 @import './components/CourseConent.css';
 @import './components/Filter.css';
 @import './components/contact.css';
+@import './components/ForgetPassword.css';
+@import './components/ResetPassword.css';
 
 
 
