--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@
 @import './admin/CourseTable.css';
 @import './admin/ReviewTable.css';
 @import './admin/UserTable.css';
-@import './admin/RoleTable.css';
+@import './admin/RoleCard.css';
 
 
 
