--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,7 @@
 @import './admin/ReviewTable.css';
 @import './admin/UserTable.css';
 @import './admin/RoleCard.css';
+@import './admin/Session.css';
 
 
 
